# LibAMM

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCY_ISOLATION.md  Doxyfile  MIGRATION_STATUS.md  QUICKSTART.md  README.md  README_MIGRATION_CN.md  SUBMODULE.md  buildCPUOnly.sh  buildWithCuda.sh  commit.sh  commit_info  genDoc.sh  migrate_to_eigen.sh  setup.py  test_eigen_migration.cpp  test_tensor  test_tensor_only.cpp
benchmark/: CMakeLists.txt  config.csv  pythonTest.py  temp1.csv  temp2.csv
benchmark/datasets/: README.md
benchmark/datasets/AST/: README.md
benchmark/datasets/BUS/: README.md  gemat1.mtx
benchmark/datasets/DWAVE/: README.md  dwa512.mtx
benchmark/datasets/ECO/: README.md  wm2.mtx  wm3.mtx
benchmark/datasets/MNIST/: README.md
benchmark/datasets/MediaMill/: step1RSaveCsv.ipynb  step2PythonSaveTensor.ipynb
benchmark/datasets/Mediamill/: step1RSaveCsv.ipynb  step2PythonSaveTensor.ipynb
benchmark/datasets/NNC1374/: README.md  nnc1374.mtx
benchmark/datasets/QCD/: README.md  complex_to_modulus.m  qcda_small.mtx  qcdb_small.mtx
benchmark/datasets/RDB/: README.md  rdb2048.mtx  rdb2048l.mtx
benchmark/datasets/UTM/: README.md
benchmark/datasets/ZENIOS/: README.md
benchmark/results/: utils.ipynb
benchmark/results/AMME2E_static_lazy/: int8_fp32.txt
benchmark/scripts/: expList copy.txt  expList.txt  rerunAll.sh
benchmark/scripts/AMME2E_1stream1static_eager/: OoOCommon.py  config_e2e_1stream1static_eager.csv  drawTogether.py
benchmark/scripts/AMME2E_1stream1static_lazy/: config_e2e_1stream1static_lazy.csv  drawTogether.py
benchmark/scripts/AMME2E_2stream_eager/: config_e2e_2stream_eager.csv  drawTogether.py
benchmark/scripts/AMME2E_2stream_lazy/: config_e2e_2stream_lazy.csv  drawTogether.py
benchmark/scripts/AMME2E_Staic_lazy/: drawTogether.py
benchmark/scripts/AMME2E_static_2stream_lazy/: config_e2e_2stream_lazy.csv  drawTogether.py
benchmark/scripts/AMME2E_static_eager/: config_e2e_static_eager.csv  drawTogether.py
benchmark/scripts/AMME2E_static_lazy/: config_e2e_static_lazy.csv  drawTogether.py  groupBar2.py
benchmark/scripts/AMME2E_static_lazy_unnormalized/: config_e2e_static_lazy_unnormalized.csv  drawTogether copy.py  drawTogether.py
benchmark/scripts/AMMPCA_static_lazy/: config_e2e_static_lazy.csv  drawTogether.py
benchmark/scripts/CCA/: debug_M.ipynb
benchmark/scripts/DownstreamCCA_static_lazy/: config_cca_static_lazy.csv  drawTogether.py  plotPCACCAtogether.ipynb
benchmark/scripts/DownstreamCCA_static_lazy copy/: config_cca_static_lazy.csv  debug_M.ipynb  drawTogether.py
benchmark/scripts/DownstreamPCA_static_lazy/: config_pca_static_lazy.csv  drawTogether.py
benchmark/scripts/Downstream_Inference/: README.md  config_dnn_inference.csv  drawTogether.py  mm_temp_test_madness.csv  wget-log  wget-log.1  wget-log.2
benchmark/scripts/Downstream_qcd/: config_e2e_static_lazy.csv  drawTogether.py  qcdS1_m10.pth  qcdS2_m10.pth
benchmark/scripts/Instructions_breakdown_1/: accuBar.py  drawTogether.py  groupBar2.py
benchmark/scripts/MM/: time_complexity.ipynb
benchmark/scripts/PCA/: benchmarkpca.ipynb  distribution.ipynb  preprocess.ipynb  run.sh
benchmark/scripts/PyAMM/: tutorial.ipynb
benchmark/scripts/common/: OoOCommon.py
benchmark/scripts/cycles_breakdown_1/: accuBar.py  drawTogether.py  groupBar2.py
benchmark/scripts/downstream_combine/: config_e2e_static_lazy.csv  draw.py  drawCCA.py  drawInference.py  drawPCA.py  drawQCD.py  drawTogether.py  drawTogetherTR.py  drawTraining.py  groupBar2.py  model.py  (+4 more)
benchmark/src/: Benchmark.cpp  BenchmarkCCA.cpp  BenchmarkMM.cpp  BenchmarkPCA.cpp  BenchmarkQCD.cpp
benchmark/torchscripts/: BernoulliCRS.pt  BernoulliCRS.py  BetaCoOccurringFD.pt  BetaCoOccurringFD.py  CRS.pt  CRSV2.pt  CoOccurringFD.pt  CoOccurringFD.py  ColumnRowSampling.py  ColumnRowSamplingVer2.py  CountSketch.py  E2E_Minist.py  ElementWiseSampling.py  FDAMM.py  FastJLT.pt  FastJLT.py  SRHT.py  TugOfWar.py  WeightedCR.pt  WeightedCR.py  beta-Co-Occurring FD.pt  beta-CoOccurringFD.py
src/: CLContainer.cpp  CMakeLists.txt  PyAMM.cpp  myVecAdd.cpp  pythonBoundings.cpp
src/CPPAlgos/: AbstractCPPAlgo.cpp  BCRSCPPAlgo.cpp  BetaCoOFDCPPAlgo.cpp  BlockLRACPPAlgo.cpp  CLMMCPPAlgo.cpp  CMakeLists.txt  CPPAlgoTable.cpp  CRSCPPAlgo.cpp  CRSCudaAlgo.cpp  CRSV2CPPAlgo.cpp  CoOccurringFDCPPAlgo.cpp  CountSketchCPPAlgo.cpp  EWSCPPAlgo.cpp  FastJLTCPPAlgo.cpp  INT8CPPAlgo.cpp  ProductQuantizationHash.cpp  ProductQuantizationRaw.cpp  RIPCPPAlgo.cpp  SMPPCACPPAlgo.cpp  TugOfWarCPPAlgo.cpp  VectorQuantization.cpp  WeightedCRCPPAlgo.cpp
src/MatrixLoader/: AbstractMatrixLoader.cpp  BetaMatrixLoader.cpp  BinomialMatrixLoader.cpp  CCAMatrixLoader.cpp  CMakeLists.txt  ExponentialMatrixLoader.cpp  GaussianMatrixLoader.cpp  MNISTMatrixLoader.cpp  MatrixLoaderTable.cpp  MediaMillMatrixLoader.cpp  MtxMatrixLoader.cpp  PoissonMatrixLoader.cpp  RandomMatrixLoader.cpp  SIFTMatrixLoader.cpp  SparseMatrixLoader.cpp  ZeroMaskedMatrixLoader.cpp  ZipfMatrixLoader.cpp
src/Parallelization/: BlockPartitionRunner.cpp  CMakeLists.txt
src/Streaming/: BlockPartitionStreamer.cpp  CMakeLists.txt  SingleThreadStreamer.cpp  Streamer.cpp  TimeStamper.cpp
src/Utils/: CMakeLists.txt  IntelliLog.cpp  UtilityFunctions.cpp
test/: CMakeLists.txt  config_Normal.csv
test/SystemTest/: BlockLRATest.cpp  BlockPartitionTest.cpp  CLTest.cpp  CRSTest.cpp  EWSTest.cpp  FastJLTTest.cpp  INT8Test.cpp  Maddness.cpp  MtxMatrixLoaderTest.cpp  PQTest.cpp  RIPTest.cpp  SMPPCATest.cpp  SRHTTest.cpp  SimpleTest.cpp  SketchTest.cpp  StreamingTest.cpp  TugOfWarTest.cpp  WeightedCRTest.cpp  ZeroMaskedMatrixLoaderTest.cpp  ZipfMatrixLoaderTest.cpp  catch.hpp  catch_reporter_automake.hpp  catch_reporter_sonarqube.hpp  catch_reporter_tap.hpp  catch_reporter_teamcity.hpp
test/scripts/: config_Madness.csv
test/torchscripts/: BernoulliCRS.pt  BernoulliCRS.py  CRSV2.pt  ColumnRowSampling.py  ColumnRowSamplingVer2.py  CountSketch.pt  CountSketch.py  E2E_Minist.py  EWS.pt  FDAMM.pt  FastJLT.pt  FastJLT.py  RAWMM.pt  SRHT.pt  TugOfWar.pt  prototypes.pt
(+3845 files in other folders)
